# startemplates

./: .gitignore
axum-api/: .env  Cargo.toml  Makefile  docker-compose.yml
axum-api/itests/tests/: auth_test.py
axum-api/src/: config.rs  error.rs  main.rs  models.rs  schema.rs  state.rs
axum-api/src/api/v1/: mod.rs
axum-api/src/api/v1/authentication/: login.rs
axum-api/src/api/v1/ws/: mod.rs
axum-api/src/controllers/: group_controller.rs  mod.rs  project_controller.rs  ticket_controller.rs  user_controller.rs
axum-api/src/db/: mod.rs
axum-api/src/db/arangodb/: mod.rs
axum-api/src/db/inmemory/: mod.rs
axum-api/src/middleware/: auth.rs  mod.rs  user_utils.rs
axum-api/src/test/: login_test.rs  mod.rs
axum-api/src/utils/: mod.rs
axum-api/src/validation/: mod.rs  naming.rs
python-fastapi-spa/: .env  .gitignore  Makefile  main.py  requirements.txt
python-fastapi-spa/api/v1/: websocket.py
python-fastapi-spa/api/v1/auth/: auth.py
python-fastapi-spa/api/v1/private/: profile.py  router.py
python-fastapi-spa/config/: auth.py  config.py  jwt_config.py
python-fastapi-spa/models/: user.py
python-fastapi-spa/schemas/: auth.py
python-fastapi-spa/services/: auth_service.py  websocket_manager.py
python-fastapi-spa/storage/: usersyaml.py
python-fastapi-spa/tests/: basic_auth_test.py
react-router-framework-frontend/: package-lock.json  package.json
stuff/: login-register-rsuite.tsx  login-register-tailwind.tsx
