[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
bcrypt = "0.17.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "full", "tokio-macros"] }
tracing = "0.1.41"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
log = "0.4.28"
chrono = { version = "0.4.42", features = ["serde"] }
